# lab

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml  recursion-violation-report.md  requirements-dev.txt  requirements.txt  setup.py
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-06/06-04-issue-codex-automation/: check.jsonl  implement.jsonl  implementation.md  prd.md  task.json
.trellis/tasks/archive/2026-06/06-04-issue-codex-automation/research/: codex-cli-boundary.md  github-issues-api.md
.trellis/tasks/archive/2026-06/06-06-add-chinese-readme-documentation/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/workspace/xzq/: index.md  journal-1.md
backend/: pom.xml
backend/src/main/java/com/example/hellodemo/: HelloController.java  HelloDemoApplication.java
backend/src/test/java/com/example/hellodemo/: HelloControllerTest.java
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  helloApi.ts  styles.css
frontend/test/: helloApi.test.mjs
issue_codex_automation/: __init__.py  __main__.py  cli.py  config.py  errors.py  github.py  logger.py  prompt.py  state.py
issue_codex_automation/commands/: check.py  generate.py
issue_codex_automation/github/: __init__.py  client.py  models.py  repo_resolver.py
issue_codex_automation/prompt/: __init__.py  builder.py  templates.py
issue_codex_automation/state/: __init__.py  manager.py  models.py
